# FoveaMIL

./: .env.example  .gitignore  LICENSE  README.md  log.txt  log_models.txt  log_models_2.txt  log_models_3.txt  pyproject.toml  pytest_output.txt
.github/workflows/: tests.yml
cohort/: README.md
cohort/labels/: README.md  labels.template.csv
cohort/splits/: README.md  split.template.csv
cohort/splits/11class/: README.md
cohort/splits/3class/: README.md
configs/: README.md  sweep.example.yaml  sweep_11class_virchow2.yaml  sweep_11class_virchow2_mcts.yaml  train.example.yaml
environments/: README.md  environment-cu118.yml  environment-cu128.yml
pretrained/: README.md
scripts/: README.md  eval.sh  extract_coords.sh  extract_features.sh  run_11class_experiment.sh  sweep.sh  train.sh  visualize.sh
src/foveamil/cohort/: README.md  __init__.py  cli.py  labels.py  splits.py
src/foveamil/encoders/: README.md  __init__.py  auth.py  base.py  resnet.py  uni.py  virchow.py  virchow_mini.py
src/foveamil/evaluation/: README.md  __init__.py  ablation.py  ablation_cli.py  calibration.py  calibration_cli.py  curves.py  curves_cli.py  group_metrics.py  redundancy.py  redundancy_cli.py  report.py  report_cli.py  stability.py  stability_cli.py  stats.py
src/foveamil/models/: README.md  __init__.py  attention.py  fusion.py  heads.py  instance.py  mil.py
src/foveamil/preprocessing/: README.md  __init__.py  coordinates.py  coordinates_cli.py  features.py  features_cli.py
src/foveamil/training/: README.md  __init__.py  accessor.py  config.py  cv.py  dataset.py  hierarchy.py  losses.py  metrics.py  minority.py  resolve.py  saver.py  stage_cli.py  staging.py  sweep.py  sweep_cli.py  train_cli.py  (+3 more)
tests/: README.md  test_ablation.py  test_aggregator.py  test_attention_norm.py  test_calibration.py  test_curriculum.py  test_curves.py  test_cv_aggregate.py  test_dataset.py  test_decorrelation.py  test_dpp.py  test_features.py  test_foundation.py  test_group_metrics.py  test_hierarchy.py  test_integration_compose.py  test_losses.py  test_metrics.py  test_minority.py  test_models.py  test_provenance.py  test_resolve.py  test_saver.py  test_search.py  test_selection_baselines.py  test_stability.py  test_staging.py  test_stats.py  test_sweep.py  test_viz_cases.py  test_viz_geometry.py  test_viz_illuminate.py  test_viz_loader.py  test_viz_region_reader.py  test_warmstart_freeze.py  test_zoom_driver.py
(+63 files in other folders)
